[package]
name = "ghqrs"
version = "0.1.1"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "Manages cloned repositories from Git hostings"

[dependencies]
clap = "^2.13.0"
walkdir = "^0.1.8"
regex = "^0.1.77"
url = "^1.2.0"
shellexpand = "^0.1.0"
toml = "^0.2.1"
rustc-serialize = "^0.3.19"
